<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.CharacterAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:elevation="2dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:src="@drawable/ic_item_add_foreground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/placer_add_item"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/form_field_horizontal_margin"
                android:layout_marginVertical="@dimen/form_field_vertical_margin"
                android:orientation="horizontal"
                android:showDividers="middle"
                android:divider="@drawable/divider_empty">

                <ImageView
                    android:id="@+id/item_image_field"
                    android:background="@drawable/background_imageview"
                    android:src="@drawable/weapon_0"
                    android:tooltipText="@string/placer_character_image_choose"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"/>

            </LinearLayout>

            <EditText
                android:id="@+id/character_name_field"
                android:background="@drawable/background_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/form_field_horizontal_margin"
                android:layout_marginVertical="@dimen/form_field_vertical_margin"
                android:hint="@string/placer_item_name_enter"
                android:textColorHint="@color/light_gray"
                android:singleLine="true"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/character_category_field"
                android:background="@drawable/background_spinner"
                android:popupBackground="@drawable/background_spinner_popup"
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                android:hint="@string/placer_character_category_enter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="16sp"
                android:layout_marginVertical="8sp"
                android:spinnerMode="dropdown" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_strip_height"
                android:background="@color/white"
                android:useDefaultMargins="true"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/form_field_horizontal_margin"
                android:layout_marginVertical="@dimen/form_field_vertical_margin"
                android:columnCount="2">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:text="@string/placer_cancel"/>

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:text="@string/placer_add"/>

            </GridLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>